--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch src/data/cities.json --port 3333"
+    "server": "json-server --watch ./data/cities.json --port 3333"
   },
   "dependencies": {
     "country-flag-emoji-polyfill": "^0.1.8",
+    "fs": "^0.0.1-security",
     "json-server": "^1.0.0-alpha.23",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
